objects/Product_Attribute__c.object
<CustomObject>
    <description>Attributes associated to Products</description>
    <fields>
        <fullName>AMT_GSS__c</fullName>
        <label>AMT GSS</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BU_Category__c</fullName>
        <label>BU Category</label>
        <picklist>
            <picklistValues>
                <fullName>ATPG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Azuro</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CAD/CAM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chip Planning Solutions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CIC-Misc</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Circuit Simulation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Component Information Manag</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Computational Lithography</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Conformal Constraint Designer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Conformal ECO Designer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Conformal Equivalency Checker</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Conformal Low Power</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Controller</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CSV Verification</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Denali MMAV</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Denali Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Denali PureView</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Denali VIP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Design Creation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Design Planning</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Digital Nm Analysis</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DSM-Misc</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DV-Misc</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Emulation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Encounter DFT Architect</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Encounter Diagnostics</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Encounter Test Solutions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Encounter True-Time ATPG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Environment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Equivalence Checking</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>BU_Family__c</fullName>
        <label>BU Family</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BU_Summary__c</fullName>
        <label>BU Summary</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bypass_Entitlement_Check__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Bypass Entitlement Check</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CPM_ID__c</fullName>
        <externalId>true</externalId>
        <label>CPM ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cadence_Platform__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Cadence Platform</label>
        <referenceTo>Cadence_Platform__c</referenceTo>
        <relationshipLabel>Attributes</relationshipLabel>
        <relationshipName>Attributes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Design_Technology__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Design Technology</label>
        <referenceTo>Design_Technology__c</referenceTo>
        <relationshipLabel>Attributes</relationshipLabel>
        <relationshipName>Attributes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>External_Family_1__c</fullName>
        <label>External Family 1</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>External_Family_2__c</fullName>
        <label>External Family 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>External_Family_3__c</fullName>
        <label>External Family 3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>External_ID__c</fullName>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>15</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>External_Product_Platform_View__c</fullName>
        <label>External Product Platform View</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GUID__c</fullName>
        <label>GUID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Operational_Marketing_View__c</fullName>
        <label>Operational Marketing View</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Operational_Segment__c</fullName>
        <label>Operational Segment</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Attribute_Number__c</fullName>
        <displayFormat>PA-{000000}</displayFormat>
        <label>Product Attribute Number</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Product_Sector__c</fullName>
        <label>Product Sector</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Profit_Centre__c</fullName>
        <label>Profit Center</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Realization__c</fullName>
        <label>Realization</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Row_Id_Transition__c</fullName>
        <formula>IF( isMigrated_Record__c , Row_Id__c, Product_Attribute_Number__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Row Id Transition</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Row_Id__c</fullName>
        <externalId>true</externalId>
        <label>Row Id</label>
        <length>15</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>ACTIVE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>INACTIVE</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>isMigrated_Record__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Migrated Record</label>
        <type>Checkbox</type>
    </fields>
    <label>Product Attribute</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <columns>Status__c</columns>
        <columns>BU_Category__c</columns>
        <columns>BU_Summary__c</columns>
        <columns>External_Family_1__c</columns>
        <columns>External_Family_2__c</columns>
        <columns>External_Family_3__c</columns>
        <columns>Profit_Centre__c</columns>
        <columns>Cadence_Platform__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Product_Sect</fullName>
        <columns>NAME</columns>
        <columns>Product_Sector__c</columns>
        <columns>BU_Family__c</columns>
        <columns>Cadence_Platform__c</columns>
        <columns>External_Family_1__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>ACTIVE</value>
        </filters>
        <label>Product Sector</label>
        <language>en_US</language>
        <sharedTo>
            <group>COS_TEAM</group>
        </sharedTo>
    </listViews>
    <nameField>
        <label>Product Attribute Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Attributes</pluralLabel>
    <recordTypes>
        <fullName>Default</fullName>
        <active>true</active>
        <label>Default</label>
    </recordTypes>
    <sharingModel>Read</sharingModel>
</CustomObject>